Fix layout shift when new exercises load in

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -41,3 +41,9 @@
 .delete:hover, .delete:focus {
   background: var(--warning)
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
